oauth-proxy-custom-authz/manifests-110/oauth2proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      hostAliases:
      - ip: 10.96.201.215
        hostnames:
        - dex.127.0.0.1.nip.io
      containers:
      - name: oauth-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
        ports:
          - name: oauth2-proxy
            containerPort: 4180
        args:
          - --http-address=0.0.0.0:4180
          - --email-domain="example.com"
          - --cookie-refresh=1h
          - --cookie-secure=false # Set to false for test environment only
          - --set-xauthrequest=true # X-Auth-Request-User, X-Auth-Request-Email, X-Auth-Request-Preferred-Username, X-Auth-Request-Groups
          - --pass-access-token=true # X-Auth-Request-Access-Token, must first enable --set-xauthrequest
          - --set-authorization-header=true # Authorization: Bearer <JWT>
          - --pass-authorization-header=true # pass OIDC IDToken to upstream via Authorization Bearer header
          - --pass-host-header=true # pass the request Host Header to upstream
          - --pass-access-token=true # pass OAuth access_token to upstream via X-Forwarded-Access-Token header. When used with --set-xauthrequest this adds the X-Auth-Request-Access-Token header to the response
          - --upstream=static://200
          - --reverse-proxy
          - --whitelist-domain=".127.0.0.1.nip.io"
          - --cookie-domain=".127.0.0.1.nip.io"
          - --cookie-name=_oauth2_proxy
          #- --cookie-samesite=lax
          #- --scope="openid groups profile email"
          - --provider=oidc
          - --login-url=https://dex.127.0.0.1.nip.io/auth # redirect for user - https
          #- --logout-url
          - --oidc-jwks-url=http://dex.127.0.0.1.nip.io/keys # this is accessed by proxy in-mesh - http
          - --redeem-url=http://dex.127.0.0.1.nip.io/token # This is accessed by proxy in-mesh - http
          - --skip-oidc-discovery=true
          - --oidc-issuer-url=http://dex.127.0.0.1.nip.io # must match the issuer from dex
          - --redirect-url=http://oauth2-proxy.127.0.0.1.nip.io/oauth2/callback
          - --skip-provider-button=true
          - --skip-jwt-bearer-tokens=true # will skip requests that have verified JWT bearer tokens (the token must have aud that matches this client id or defined in extra-jwt-issuer )
          #- --allowed-group=enginnering
          #- --allowed-group=it
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: dex
spec:
  selector: 
    app: oauth2-proxy
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: dex
spec:
  hosts:
  - "oauth2-proxy.127.0.0.1.nip.io"
  gateways:
  - auth
  http:
  - route:
    - destination:
        host: oauth2-proxy
